# CommunityGovernace

./: CMakeLists.txt  README.md  a.json  build_proto.sh  tmp_demo1024.json
cmake/: protobuf-config.cmake
cmake/Modules/: FindgRPC.cmake
docs/: design.md
protos/: SPService.proto
src/: Makefile
src/Common/: config.h.in  msg_utils.h  settings.h
src/Common/nlohmann/: json.hpp
src/CommonCpp/: agent_wget.cpp  common.cpp  msg_utils.cpp
src/SPService/: crypto_utils.cpp  crypto_utils.h  main.cpp  service.cpp  service.h  utils.cpp
src/isv_app/: client.cpp  config.h  isv_app.cpp  ra_client.hpp
src/isv_enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl  json.hpp
src/test/: crypto_utils_test.cpp  json_test.cpp  proto_test.cpp
